<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/default_background" 
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin">

     <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:clickable="false"
        >        
        <ImageView
            android:id="@+id/imgGuitar"
            style="@style/MyImageButtonChoseInstrument"
            android:contentDescription="@string/choseToGuitar"
            android:src="@drawable/button_menu_guitar" />

        <ImageView
            android:id="@+id/imgBass"
            style="@style/MyImageButtonChoseInstrument"
            android:contentDescription="@string/choseToBass"
            android:src="@drawable/button_menu_bass" />

        <ImageView
            android:id="@+id/imgPiano"
            style="@style/MyImageButtonChoseInstrument"
            android:contentDescription="@string/choseToPiano"
            android:src="@drawable/button_menu_piano" />

    </LinearLayout>

    <View
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="@color/blue"/>
         
     <LinearLayout 
        android:id="@+id/instrument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:background="@drawable/selector_bg_guitar"/>
    
    <TableLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal" 
        android:clickable="false">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:minHeight="70dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical" >

            <Button
                android:id="@+id/imgC"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/C"
                android:text="@string/C" />

            <Button
                android:id="@+id/imgCS"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/CS" 
                android:text="@string/CS"/>

            <Button
                android:id="@+id/imgD"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/D"
                android:text="@string/D" />

            <Button
                android:id="@+id/imgDS"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/DS" 
                android:text="@string/DS"/>

            <Button
                android:id="@+id/imgE"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/E" 
                android:text="@string/E"/>

            <Button
                android:id="@+id/imgF"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/F" 
                android:text="@string/F"/>
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:minHeight="70dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical">

            <Button
                android:id="@+id/imgFS"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/FS" 
                android:text="@string/FS"/>

            <Button
                android:id="@+id/imgG"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/G" 
                android:text="@string/G"/>

            <Button
                android:id="@+id/imgGS"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/GS" 
                android:text="@string/GS"/>

            <Button
                android:id="@+id/imgA"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/A" 
                android:text="@string/A"/>

            <Button
                android:id="@+id/imgAS"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/AS" 
                android:text="@string/AS"/>

            <Button
                android:id="@+id/imgB"
                style="@style/img_button_style_hard_mode"
                android:background="@drawable/selector_button_keys"
                android:contentDescription="@string/B" 
                android:text="@string/B"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/table"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|bottom"
        android:singleLine="true"
        android:text="@string/show_msg_touch_button" />

</RelativeLayout>