<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/default_background"
    tools:context=".About" >
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        
        android:text="@string/thanks"
         /> <!-- android:textAlignment="center" -->

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textView3"
          android:layout_below="@+id/textView1"
          android:layout_marginTop="46dp"
          android:text="@string/names"
          android:textAppearance="?android:attr/textAppearanceSmall" />

      <TextView
          android:id="@+id/textView1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textView3"
          android:layout_alignParentTop="true"
          android:layout_marginTop="55dp"
          android:text="@string/about_credits"
          android:textColor="@android:color/background_light"
          android:textSize="15sp" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/textView1"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="18dp"
          android:text="@string/credits"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@android:color/background_light" />

      <TextView
          android:id="@+id/TextView01"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/textView2"
          android:layout_alignBottom="@+id/textView2"
          android:layout_alignRight="@+id/textView3"
          android:gravity="right"
          android:textColor="@android:color/background_light"
          android:text="@string/helps"
          android:textAppearance="?android:attr/textAppearanceSmall" />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/textView2"
          android:layout_centerHorizontal="true"
          android:text="@string/title_activity_send_email"
          android:onClick="clickOpenSendEmail" />

</RelativeLayout>
