<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/default_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:orientation="vertical">
    
    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="45sp"
            android:text="@string/title_activity_player" />

    <ImageView
        android:id="@+id/img_player"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:importantForAccessibility="no"
        android:background="@drawable/avatar"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/edtPlayerName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_"
        android:ems="15"
        android:layout_margin="5dp"
        android:inputType="textCapCharacters"
        android:maxLength="15"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/btn_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:text="@string/general_string"
            style="@android:style/TextAppearance.DeviceDefault.Large"
             />

        <TextView
            android:id="@+id/txtSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single"
            />

        <Button
	       android:id="@+id/btn_save_submit"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:background="@drawable/button_send_score"
	       android:layout_marginLeft="10dp"
	       />
        
        <TextView
            android:id="@+id/txtHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/hard" />
        
        <TextView
            android:id="@+id/btn_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_string"
            style="@android:style/TextAppearance.DeviceDefault.Large" />

    </LinearLayout>
</LinearLayout>