<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout 
    android:id="@+id/user"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	    <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_activity_single_score"
	        android:layout_gravity="center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <ToggleButton
	        android:id="@+id/btn_change_view"
	        style="@style/MyToggleMode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="end"
			android:layout_margin="15dp"
	        android:checked="false"
	        android:onClick="showSingleHardMode" />
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:layout_marginTop="10dp" >
	
	        <!--<ImageView-->
	            <!--android:id="@+id/img_player"-->
	            <!--android:layout_width="55dp"-->
	            <!--android:layout_height="55dp"-->
	            <!--android:background="@drawable/avatar"-->
	            <!--android:importantForAccessibility="no"-->
	            <!--/>-->
	
	        <TextView
	            android:id="@+id/txt_player_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_weight="3"
	            android:text="@string/player_name" />
	
	        <TextView
	            android:id="@+id/txt_score"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	             android:layout_weight="0.01"/>
	
	    </LinearLayout>
	    
	    <View
	        android:id="@+id/imgLine2"
	        android:layout_width="match_parent"
	        android:layout_height="3dp"
	        android:layout_marginTop="7dp"
	        android:layout_marginBottom="7dp"
	        android:background="@color/blue"/>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
	
	    <ProgressBar
	        android:id="@+id/progressBar1"
	        style="@android:style/Widget.ProgressBar.Large"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:visibility="invisible" />
	    
	      <TextView
                android:id="@+id/txt_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/msg_error_getting_score_list"
                android:layout_gravity="center"
                android:visibility="invisible" />
	</LinearLayout>
</RelativeLayout>